# avo-silvina-mealie-importer

./: .env.tpl  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
importer/: __main__.py  cli.py  client.py  config.py  runner.py
importer/sources/: static_source.py  url_source.py
recipes/mediterranean/: gazpacho.json  moussaka.json  shakshuka.json  tabbouleh.json
recipes/portuguese/: arroz_de_pato.json  bacalhau_a_bras.json  caldo_verde.json  cataplana_de_marisco.json  cozido_a_portuguesa.json  pasteis_de_nata.json
tests/: conftest.py  test_client.py  test_runner.py  test_static_source.py  test_url_source.py
tests/fixtures/: sample_portuguese.yaml  sample_recipe.json
urls/: mediterranean.yaml  portuguese.yaml
